Remove virtual executor util and use common config in common modules. Requires --enable-preview to be added to a few test/compiler configs.