@@ -78,7 +78,7 @@
                     <artifactId>maven-surefire-plugin</artifactId>
                     <configuration>
                         <!-- required for Weld -->
-                        <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
+                        <argLine>--add-opens=java.base/java.lang=ALL-UNNAMED --enable-preview</argLine>
                         <systemPropertyVariables>
                             <java.util.logging.config.file>src/test/resources/logging.properties</java.util.logging.config.file>
                             <config_ordinal>120</config_ordinal>
